# mcp

./: .dockerignore  .env.opencode.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CLI_API_PATTERN.md  DOMAIN.md  Dockerfile  Dockerfile.opencode  LICENSE  MCP_QUICKSTART.md  QUICKSTART.md  README.md  REGISTRY_GUIDE.md  SPEC.md  SPEC.zh-CN.md  SPEC_FEDERATION_EXTENSION.md  SPEC_OPENAPI_MAPPING.md  TMF_MCP_SERVER_GUIDE.md  baseline_old.json  bench_token_usage.py  config.json  config.py  conformance_test.py  docker-compose.registry.yml  docker-compose.yml  edge_test.py  mcp_server.py  mock_server_config.json  mock_tmf620_api.py  mock_tmf620_api_fastapi.py  opencode.json  opencode.json.template  opencode.sidecar.json.template  pyproject.toml  registry.md  registry_core.py  registry_server.py  requirements.txt  (+14 more)
.claude/: settings.json
.kiro/settings/: mcp.json
.opencode/agents/agent/: service-registry.md
.opencode/skills/registry/: SKILL.md
.opencode/skills/registry/references/: tmf-api-reference-catalog.md
TMF629/: TMF629-Customer_Management-v5.0.1.oas.yaml  requirements.txt  run_both_servers.py  run_mcp_server.py  run_mock_server.py  tmf629_client.py  tmf629_mcp_server.py  tmf629_mock_server.py
TMF637/: README.md  requirements.txt  run_both_servers.py  run_mcp_server.py  run_mock_server.py  tmf637_client.py  tmf637_mcp_server.py  tmf637_mock_server.py
TMF760/: README.md  README_fastapimcp.md  mcp_config.json  mcp_requirements_simplified.txt  run_mcp_server_fastapimcp.py  run_server.py  tmf760_mcp_http_server_fastapimcp.py  tmf760_server.py
benchmarks/: bench_token_usage.py
docs/: QUICKSTART.md  README.md  REGISTRY_GUIDE.md  SPEC.md  SPEC_FEDERATION_EXTENSION.md  SPEC_OPENAPI_MAPPING.md
registry_agent/: __init__.py  build_tmf_catalog.py  core.py  server.py
registry_agent/data/: tmf_api_catalog.json
scripts/: bootstrap-runtime.sh  check-secret-files.sh  render-opencode-runtime.sh  start-opencode.sh  start-registry.sh  start.sh
tests/: __init__.py  conformance_test.py  edge_test.py  test_cli_api.py  test_local_contracts.py  test_registry.py  test_suite.py
tmf620/: __init__.py  benchmark.py  commands.py  core.py  mock_api.py  server.py
tmf620/config/: mock_server_config.json
