[project]
name = "tmf620-mcp-server"
version = "1.0.0"
description = "TMF620 Product Catalog Management MCP Server with Mock API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "mcp>=1.0.0",
    "fastapi-mcp>=0.1.0",
    "tiktoken>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
tmf620-mock-server = "tmf620.mock_api:main"
tmf620-mcp-server = "tmf620.server:main"
tmf620-benchmark = "tmf620.benchmark:main"
registry-server = "registry_agent.server:main"
registry-cli = "registry_agent.core:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tmf620", "registry_agent"]
include = [
    "tmf620/*.py",
    "registry_agent/*.py",
    "tmf620/config/*.json",
    "registry_agent/data/registry.md"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ['py310']
